<resources>
    <string name="app_name">Lab2_punto3</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="Bienvenido">Nota Final</string>
    <string name="quices">Quices </string>
    <string name="expo">Exposición </string>
    <string name="pract">Prácticas </string>
    <string name="proy">Proyecto </string>
    <string name="n_quices">15%</string>
    <string name="n_expo">10%</string>
    <string name="n_pract">40%</string>
    <string name="n_proy">35%</string>
    <string name="cero">0.00</string>
    <string name="calcular">Calcular</string>
</resources>
